--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ figcaption{
     opacity: 1;
 }
 .article-body{
+    overflow-x: hidden;
     opacity: 0;
     padding-bottom: 10%;
 }
@@ -236,6 +237,9 @@ figcaption{
         width: 80%;
         font-size: 1.3em;
         margin: 0 auto 1em auto;
+    }
+    .text-message{
+        width: 80%;
     }
     .nav-bar{
         padding: 1% 0 0 0 ;
