--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-    overflow-x: hidden;
-}
 body::-webkit-scrollbar {
     width: .5em;
     z-index: 500;
@@ -182,7 +179,7 @@ figcaption{
     opacity: 1;
 }
 .article-body{
-    overflow-x: hidden;
+
     opacity: 0;
     padding-bottom: 10%;
 }
@@ -198,6 +195,7 @@ figcaption{
     margin: 0 auto 1em auto;
 }
 .text-message{
+    display: none;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     width: 25%;
@@ -209,6 +207,9 @@ figcaption{
     position: relative;
     transition: left 1s;
     user-select: none;
+}
+.text-activated{
+    display: block !important;
 }
 .text-fly{
     left: 0 !important;
